# cpp_rust_integration

./: CMakeLists.txt  Cargo.toml  README.md
src_cpp/: main.cpp
src_rust/: lib.rs
